--- a/api-reference/langchain-postprocess.mdx
+++ b/api-reference/langchain-postprocess.mdx
@@ -24,7 +24,8 @@ from chainlit import langchain_factory, langchain_postprocess
 @langchain_factory
 def load():
     llm = OpenAI(temperature=0)
-    llm_math = LLMMathChain(llm=llm)
+    llm_math = LLMMathChain.from_llm(llm=llm)
+
     return llm_math
 
 @langchain_postprocess
