--- a/overview.mdx
+++ b/overview.mdx
@@ -18,4 +18,4 @@ It revolutionizes the developer experience by offering a user interface that str
 
 5. **Plug and play integration with LangChain:** Chainlit seamlessly integrates with LangChain, further enhancing the capabilities of your LLM-based agents.
 
-6. **Improved team collaboration:** Chainlit's features, such as data persistence, human feedback, and prompt versioning, enable your team to work together more effectively and efficiently, leading to better AI applications.
+6. **Improved team collaboration:** Chainlit's features, such as data persistence, human feedback, and prompt versioning, enable your team to work together more effectively and efficiently.
