--- a/api-reference/langchain-factory.mdx
+++ b/api-reference/langchain-factory.mdx
@@ -13,7 +13,8 @@ from chainlit import langchain_factory
 @langchain_factory
 def load():
     llm = OpenAI(temperature=0)
-    llm_math = LLMMathChain(llm=llm)
+    llm_math = LLMMathChain.from_llm(llm=llm)
+
     return llm_math
 ```
 </RequestExample>
