--- a/api-reference/langchain-rename.mdx
+++ b/api-reference/langchain-rename.mdx
@@ -31,7 +31,8 @@ def rename(orig_author: str):
 @cl.langchain_factory
 def load():
     llm = OpenAI(temperature=0)
-    llm_math = LLMMathChain(llm=llm)
+    llm_math = LLMMathChain.from_llm(llm=llm)
+
     return llm_math
 ```
 </RequestExample>
