--- a/api-reference/langchain-run.mdx
+++ b/api-reference/langchain-run.mdx
@@ -26,13 +26,14 @@ from langchain import OpenAI, LLMMathChain
 from chainlit import langchain_factory, langchain_run
 
 @langchain_factory
-def load():
+def main():
     llm = OpenAI(temperature=0)
-    llm_math = LLMMathChain(llm=llm)
+    llm_math = LLMMathChain.from_llm(llm=llm)
     return llm_math
 
 @langchain_run
 def run(agent, input_str):
-    return agent(input_str)
+    res = agent(input_str)
+    return res["text"]
 ```
 </RequestExample>
