--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -6,6 +6,8 @@ title: Text to SQL
 
 Let's build a simple agent that helps users to create SQL queries with natural language.
 
+<Info>This example has extra dependencies, such as `openai`. You might have to install them manually.</Info>
+
 ### Imports
 
 ```python app.py
@@ -61,10 +63,10 @@ def main(message: str):
     )
 ```
 
-### Run the UI
+### Try it out
 
 ```bash
-chainlit run app.py -w
+$ chainlit run app.py -w
 ```
 
 ![SQL App](/images/sql-app.png)
