--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -2,12 +2,14 @@
 title: Document QA
 ---
 
-Example inspired from the [LangChain doc](https://huggingface.co/spaces/hwchase17/chat-your-data-state-of-the-union/tree/main)
+Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/use_cases/question_answering.html)
+
+<Info>This example has extra dependencies, such as `chromadb`. You might have to install them manually.</Info>
 
 <Note>The state of the union file is available [here](https://github.com/hwchase17/langchain/blob/master/docs/modules/state_of_the_union.txt)</Note>
 
 ## Document QA with LangChain
-````python Code Example
+````python qa.py
 from langchain.embeddings.openai import OpenAIEmbeddings
 from langchain.text_splitter import CharacterTextSplitter
 from langchain.vectorstores import Chroma
@@ -39,7 +41,7 @@ Begin!
 {summaries}"""
 messages = [
     SystemMessagePromptTemplate.from_template(system_template),
-    HumanMessagePromptTemplate.from_template("{question}")
+    HumanMessagePromptTemplate.from_template("{question}"),
 ]
 prompt = ChatPromptTemplate.from_messages(messages)
 chain_type_kwargs = {"prompt": prompt}
@@ -52,7 +54,8 @@ def init():
     # Wait for the user to upload a file
     while file == None:
         file = cl.ask_for_file(
-            title="Please upload a text file to begin!", accept=["text/plain"])
+            title="Please upload a text file to begin!", accept=["text/plain"]
+        )
 
     # Decode the file
     text = file.content.decode("utf-8")
@@ -68,8 +71,11 @@ def init():
     docsearch = Chroma.from_texts(texts, embeddings, metadatas=metadatas)
 
     # Create a chain that uses the Chroma vector store
-    chain = RetrievalQAWithSourcesChain.from_chain_type(ChatOpenAI(
-        temperature=0), chain_type="stuff", retriever=docsearch.as_retriever())
+    chain = RetrievalQAWithSourcesChain.from_chain_type(
+        ChatOpenAI(temperature=0),
+        chain_type="stuff",
+        retriever=docsearch.as_retriever(),
+    )
 
     # Save the metadata and texts in the user session
     cl.user_session.set("metadatas", metadatas)
@@ -110,5 +116,13 @@ Then, we use [@langchain_postprocess](/api-reference/langchain-postprocess) (whi
 - Add the relevant sources to the final answer
 - Send the sources to the UI
 
-## Result
+## Try it out
+
+```bash
+$ chainlit run qa.py
+```
+
+You can then upload any `.txt` file to the UI and ask questions about it.
+If you are using `state_of_the_union.txt` you can ask questions like `What did the president say about Ketanji Brown Jackson`.
+
 ![QA](/images/qa.png)
