--- a/examples/auto-gpt.mdx
+++ b/examples/auto-gpt.mdx
@@ -4,9 +4,9 @@ title: Auto GPT
 
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/use_cases/autonomous_agents/autogpt.html)
 
-<Info>This example has extra dependencies, such as `google-search-results` and `faiss`. You might have to install them manually.</Info>
+<Note>This example has extra dependencies, such as `google-search-results` and `faiss`. You might have to install them manually.</Note>
 
-<Info>If you have trouble installing `faiss`, try `pip install faiss-cpu`.</Info>
+<Note>If you have trouble installing `faiss`, try `pip install faiss-cpu`.</Note>
 
 ## Code
 ```python autogpt.py
