--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -6,7 +6,7 @@ title: Text to SQL
 
 Let's build a simple agent that helps users to create SQL queries with natural language.
 
-<Info>This example has extra dependencies, such as `openai`. You might have to install them manually.</Info>
+<Note>This example has extra dependencies, such as `openai`. You might have to install them manually.</Note>
 
 ### Imports
 
