--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -4,7 +4,7 @@ title: Document QA
 
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/use_cases/question_answering.html)
 
-<Info>This example has extra dependencies, such as `chromadb`. You might have to install them manually.</Info>
+<Note>This example has extra dependencies, such as `chromadb`. You might have to install them manually.</Note>
 
 <Note>The state of the union file is available [here](https://github.com/hwchase17/langchain/blob/master/docs/modules/state_of_the_union.txt)</Note>
 
