--- a/concepts/watcher.mdx
+++ b/concepts/watcher.mdx
@@ -5,5 +5,5 @@ The -w (watch) command line option can be passed to the chainlit run command to 
 When this option is specified, the file watcher will be started and any changes to files will cause the server to reload the app, allowing faster iterations.
 
 ```bash
-chainlit run app.py -w
+$ chainlit run app.py -w
 ```
