--- a/installation.mdx
+++ b/installation.mdx
@@ -8,12 +8,12 @@ Chainlit requires `python>=3.8`.
 <Warning>The Chainlit package has not yet been publicly released.</Warning>
 You can install the package with:
 ```bash
-pip install chainlit
+$ pip install chainlit
 ```
 
 To try if everything works correctly run:
 ```bash
-chainlit hello
+$ chainlit hello
 ```
 
 This should spawn the chainlit UI and ask for your name like so:
