--- a/langchain.mdx
+++ b/langchain.mdx
@@ -1,5 +1,5 @@
 ---
-title: Share LangChain Agents
+title: With LangChain
 ---
 
 Chainlit seamlessly integrates with LangChain to create sharable apps in seconds.
@@ -28,7 +28,7 @@ Wrap the logic that instantiate the LangChain agent in a function and add the [@
 That's it. Now just run:
 
 ```bash
-chainlit run app.py -w
+$ chainlit run app.py -w
 ```
 <Warning>When using LangChain, caching is turned on by default! The cache lives in the .chainlit folder.</Warning>
 
