--- a/overview.mdx
+++ b/overview.mdx
@@ -2,20 +2,18 @@
 title: "Chainlit - Overview"
 ---
 ## Introduction
-Chainlit is an open-source Python package that aims to make LLM-based agents explainable, debuggable, and shareable.
+Chainlit is an open-source Python package that focuses on making it incredibly easy to create chatbot user interfaces on top of any Python code (including LangChain).
 
-
-It revolutionizes the developer experience by offering a user interface that streamlines interaction with agents, allowing developers to create transparent and efficient AI applications with ease.
 
 ## Advantages of Chainlit
-1. **Enhanced explainability:** With Chainlit's user interface, you can visualize the agent's [Chain of Thought](https://ai.googleblog.com/2022/05/language-models-perform-reasoning-via.html), enabling you to understand its decision-making process and gain deeper insights into how it works.
+1. **Enhanced explainability:** Chainlit's user interface enables you to visualize intermediary steps, enabling you to understand the reasoning that behind an answer.
 
-2. **Debugging made easy:** Chainlit's prompt playground allows you to iterate on intermediate prompts and see their effect on the agent's output, making it easier to identify and fix issues in your agent.
+2. **Debugging made easy:** Chainlit's prompt playground allows you to iterate on intermediate prompts, making it easier to identify and fix bugs.
 
-3. **Seamless file management:** The package includes a set of functions to ask and send files or documents, simplifying the process of handling and sharing data with your AI agent.
+3. **Plug and play integration with LangChain:** Turn your LangChain agent in a chatbot UI with one line of code.
 
-4. **Free deployment:** Chainlit offers free deployment, allowing you to quickly and easily share your AI applications with your team or the world.
+4. **Seamless file management:** The package includes a set of functions to ask and send files or documents.
 
-5. **Plug and play integration with LangChain:** Chainlit seamlessly integrates with LangChain, further enhancing the capabilities of your LLM-based agents.
+5. **Free deployment:** Chainlit offers free deployment, allowing you to quickly and easily share your AI applications with your team or the world.
 
 6. **Improved team collaboration:** Chainlit's features, such as data persistence, human feedback, and prompt versioning, enable your team to work together more effectively and efficiently.
