--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -1,8 +1,8 @@
 ---
-title: Share Python Agents
+title: With Pure Python
 ---
 
-Chainlit turns your python code into sharable app in a few lines of code.
+Chainlit turns your python code into a sharable app in a few lines of code.
 
 ```python app.py
 import chainlit as cl
@@ -21,7 +21,7 @@ def main(message: str):
 Now just run:
 
 ```bash
-chainlit run app.py -w
+$ chainlit run app.py -w
 ```
 
 Congratulations, your first chainlit app is ready 🥳
