--- a/overview.mdx
+++ b/overview.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Chainlit - Overview"
 ---
-## Introduction
+
 Chainlit is an open-source Python package that focuses on making it incredibly easy to create chatbot user interfaces on top of any Python code (including LangChain).
 
 
 ## Advantages of Chainlit
-1. **Enhanced explainability:** Chainlit's user interface enables you to visualize intermediary steps, enabling you to understand the reasoning that behind an answer.
+1. **Enhanced explainability:** Chainlit's user interface enables you to visualize intermediary steps, enabling you to understand the reasoning behind an answer.
 
 2. **Debugging made easy:** Chainlit's prompt playground allows you to iterate on intermediate prompts, making it easier to identify and fix bugs.
 
