--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -2,7 +2,7 @@
 title: With Pure Python
 ---
 
-Chainlit turns your python code into a sharable app in a few lines of code.
+Chainlit turns your python code into a chatbot UI in a few lines of code.
 
 ```python app.py
 import chainlit as cl
@@ -18,7 +18,7 @@ def main(message: str):
     )
 ```
 
-Now just run:
+Run:
 
 ```bash
 $ chainlit run app.py -w
