--- a/langchain.mdx
+++ b/langchain.mdx
@@ -2,7 +2,7 @@
 title: With LangChain
 ---
 
-Chainlit seamlessly integrates with LangChain to create sharable apps in seconds.
+Chainlit seamlessly integrates with LangChain to create a chatbot UI in seconds.
 
 ```python app.py
 from langchain import PromptTemplate, OpenAI, LLMChain
@@ -23,9 +23,7 @@ def factory():
     return llm_chain
 ```
 
-Wrap the logic that instantiate the LangChain agent in a function and add the [@langchain_factory](/api-reference/langchain-factory) decorator.
-
-That's it. Now just run:
+That's it. Run:
 
 ```bash
 $ chainlit run app.py -w
