--- a/langchain.mdx
+++ b/langchain.mdx
@@ -23,7 +23,9 @@ def factory():
     return llm_chain
 ```
 
-That's it. Run:
+That's it. Run the following command to start the chatbot UI.
+
+```bash
 
 ```bash
 $ chainlit run app.py -w
