--- a/cloud/config.mdx
+++ b/cloud/config.mdx
@@ -27,6 +27,9 @@ user_env = []
 # Hide the chain of thought details from the user in the UI.
 hide_cot = false
 
+# Link to your github repo. This will add a github button in the UI's header.
+# github = ""
+
 # Limit the number of requests per user.
 #request_limit = "10 per day"
 ```
