--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -13,6 +13,7 @@ Let's build a simple agent that helps users to create SQL queries with natural l
 ```python app.py
 import chainlit as cl
 import openai
+import os
 
 openai.api_key = "YOUR_OPEN_AI_API_KEY"
 ```
