--- a/examples/auto-gpt.mdx
+++ b/examples/auto-gpt.mdx
@@ -4,9 +4,7 @@ title: Auto GPT
 
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/use_cases/autonomous_agents/autogpt.html)
 
-<Note>This example has extra dependencies, such as `google-search-results` and `faiss`. You might have to install them manually.</Note>
-
-<Note>If you have trouble installing `faiss`, try `pip install faiss-cpu`.</Note>
+<Note>This example has extra dependencies, such as `openai`, `google-search-results` and `faiss-cpu`. You might have to install them manually.</Note>
 
 ## Code
 ```python autogpt.py
@@ -14,7 +12,7 @@ from langchain.utilities import SerpAPIWrapper
 from langchain.agents import Tool
 from langchain.tools.file_management.write import WriteFileTool
 from langchain.tools.file_management.read import ReadFileTool
-
+import os
 
 os.environ["OPENAI_API_KEY"] = "OPENAI_API_KEY"
 os.environ["SERPAPI_API_KEY"] = "SERPAPI_API_KEY"
