--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -4,7 +4,7 @@ title: MRKL
 
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/modules/agents/agents/examples/mrkl_chat.html)
 
-<Note>This example has extra dependencies, such as `google-search-results`. You might have to install them manually.</Note>
+<Note>This example has extra dependencies, such as `google-search-results` and `openai`. You might have to install them manually.</Note>
 
 ## Code
 ```python mrkl.py
