quick start screenshot update

--- a/installation.mdx
+++ b/installation.mdx
@@ -4,9 +4,7 @@ title: Installation
 
 Chainlit requires `python>=3.8`.
 
-
-<Warning>The Chainlit package has not yet been publicly released.</Warning>
-You can install the package with:
+Open a terminal and run:
 ```bash
 $ pip install chainlit
 ```
