--- a/langchain.mdx
+++ b/langchain.mdx
@@ -28,6 +28,11 @@ That's it. Run the following command to start the chatbot UI.
 ```bash
 $ chainlit run app.py -w
 ```
+
+Congratulations, your first chainlit app is ready 🥳
+
+![LangChainExample](/images/langchain-example.png)
+
 <Warning>When using LangChain, caching is turned on by default! The cache lives in the .chainlit folder.</Warning>
 
 
