--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -26,6 +26,8 @@ $ chainlit run app.py -w
 
 Congratulations, your first chainlit app is ready 🥳
 
+![PythonExample](/images/python-example.png)
+
 <Card title="Deployment" icon="link" href="/cloud/deploy">
    Learn how to deploy your agent to the cloud.
 </Card>
