--- a/cloud/config.mdx
+++ b/cloud/config.mdx
@@ -46,6 +46,4 @@ id = "test-MbHXZmUMAnxX"
 ## Restart your app
 After restarting your app, and logging in if not already, you should see new elements in the ui:
 - The dataset tab, where you can find your persisted conversations
-- The history button in the chat input (you can also press the `up arrow` to open it)
-
-![Cloud Enabled](/images/cloud-enabled.png)
+- The user avatar, where you can logout
