--- a/concepts/elements/element-display.mdx
+++ b/concepts/elements/element-display.mdx
@@ -17,7 +17,7 @@ def start():
 ```
 
 ## Result
-![QA](/images/inline-documents.png)
+![QA](/images/inline-elements.png)
 
 ## Display Options
 In the example above, both of the elements are inlined in the message. Chainlit provides three options to display elements:
@@ -32,4 +32,4 @@ By changing the text element display mode from the previous example, the element
 send_text(text="Here is a text element", name="text1", display="side")
 ```
 
-![QA](/images/side-document.png)
+![QA](/images/side-element.png)
