--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -70,4 +70,6 @@ def main(message: str):
 $ chainlit run app.py -w
 ```
 
-![SQL App](/images/sql-app.png)
+You can ask questions like `Compute the number of customers who watched more than 50 minutes of video this month`.
+
+![SQL App](/images/text-to-sql.png)
