--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -133,6 +133,6 @@ $ chainlit run qa.py
 ```
 
 You can then upload any `.txt` file to the UI and ask questions about it.
-If you are using `state_of_the_union.txt` you can ask questions like `What did the president say about Ketanji Brown Jackson`.
+If you are using `state_of_the_union.txt` you can ask questions like `What did the president say about Ketanji Brown Jackson?`.
 
 ![QA](/images/qa.png)
