--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -4,7 +4,11 @@ title: MRKL
 
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/modules/agents/agents/examples/mrkl_chat.html)
 
-<Note>This example has extra dependencies, such as `google-search-results` and `openai`. You might have to install them manually.</Note>
+<Note>This example has extra dependencies, such as `google-search-results` and `openai`.</Note>
+
+```bash
+pip install chainlit langchain openai google-search-results
+```
 
 ## Code
 ```python mrkl.py
@@ -45,7 +49,7 @@ def load():
 ## Try it out
 
 ```bash
-$ chainlit run mrkl.py
+chainlit run mrkl.py
 ```
 
 You can ask questions like `What is the Paris weather forecast for tomorrow? How does it compare to today's?`.
