--- a/installation.mdx
+++ b/installation.mdx
@@ -6,12 +6,12 @@ Chainlit requires `python>=3.8`.
 
 Open a terminal and run:
 ```bash
-$ pip install chainlit
+pip install chainlit
 ```
 
-To try if everything works correctly run:
+Make sure everything runs smoothly:
 ```bash
-$ chainlit hello
+chainlit hello
 ```
 
 This should spawn the chainlit UI and ask for your name like so:
@@ -24,5 +24,5 @@ This should spawn the chainlit UI and ask for your name like so:
 </Card>
 
 <Card title="With PurePython" icon="link" href="/pure-python">
-   Learn on how to use Chainlit with any python code.
+  Learn on how to use Chainlit with any python code.
 </Card>
