--- a/langchain.mdx
+++ b/langchain.mdx
@@ -26,7 +26,7 @@ def factory():
 That's it. Run the following command to start the chatbot UI.
 
 ```bash
-$ chainlit run app.py -w
+chainlit run app.py -w
 ```
 
 Congratulations, your first chainlit app is ready 🥳
