--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -6,7 +6,11 @@ title: Text to SQL
 
 Let's build a simple agent that helps users to create SQL queries with natural language.
 
-<Note>This example has extra dependencies, such as `openai`. You might have to install them manually.</Note>
+<Note>This example has extra dependencies, such as `openai`.</Note>
+
+```bash
+pip install chainlit openai
+```
 
 ### Imports
 
@@ -67,7 +71,7 @@ def main(message: str):
 ### Try it out
 
 ```bash
-$ chainlit run app.py -w
+chainlit run app.py -w
 ```
 
 You can ask questions like `Compute the number of customers who watched more than 50 minutes of video this month`.
