--- a/overview.mdx
+++ b/overview.mdx
@@ -6,14 +6,16 @@ Chainlit is an open-source Python package that focuses on making it incredibly e
 
 
 ## Advantages of Chainlit
-1. **Enhanced explainability:** Chainlit's user interface enables you to visualize intermediary steps, enabling you to understand the reasoning behind an answer.
+1. **Chatbot UI:** Create cool LLM-based chatbot apps directly from your python code!
 
-2. **Debugging made easy:** Chainlit's prompt playground allows you to iterate on intermediate prompts, making it easier to identify and fix bugs.
+2. **Enhanced explainability:** Chainlit's user interface enables you to visualize intermediary steps, enabling you to understand the reasoning behind an answer.
 
-3. **Plug and play integration with LangChain:** Turn your LangChain agent in a chatbot UI with one line of code.
+3. **Debugging made easy:** Chainlit's prompt playground allows you to iterate on intermediate prompts, making it easier to identify and fix bugs.
 
-4. **Seamless file management:** The package includes a set of functions to ask and send files or documents.
+4. **Plug and play integration with LangChain:** Turn your LangChain agent in a chatbot UI with one line of code.
 
-5. **Free deployment:** Chainlit offers free deployment, allowing you to quickly and easily share your AI applications with your team or the world.
+5. **Seamless file management:** The package includes a set of functions to ask and send files or documents.
 
-6. **Improved team collaboration:** Chainlit's features, such as data persistence, human feedback, and prompt versioning, enable your team to work together more effectively and efficiently.
+6. **Deployment (coming soon):** Chainlit offers simple & free deployment, allowing you to quickly and easily share your AI applications with your team or the world.
+
+7. **Improved team collaboration (coming soon):** Chainlit's features, such as data persistence, human feedback, and prompt versioning, enable your team to work together more effectively and efficiently.
