--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -21,7 +21,7 @@ def main(message: str):
 That's it. Run the following command to start the chatbot UI.
 
 ```bash
-$ chainlit run app.py -w
+chainlit run app.py -w
 ```
 
 Congratulations, your first chainlit app is ready 🥳
