--- a/api-reference/ask/ask-for-file.mdx
+++ b/api-reference/ask/ask-for-file.mdx
@@ -7,6 +7,7 @@ If the user does not answer in time (see timeout), a TimeoutError will be raised
 If a project ID is configured, the messages will be uploaded to the cloud storage.
 
 ### Parameters
+
 <ParamField path="title" type="str">
   Text displayed above the upload button.
 </ParamField>
@@ -23,21 +24,29 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   Whether to raise a socketio TimeoutError if the user does not answer in time.
 </ParamField>
 
-<RequestExample>
+### Returns
+
+<ResponseField name="response" type="AskFileResponse" required>
+  The file uploaded by the user.
+</ResponseField>
+
+### Usage
+
 ```python Code Example
 from chainlit import send_message, ask_for_file, on_chat_start
 
+
 @on_chat_start
 def main():
-    file=None
-    # Wait for the user to upload a file
+    file = None  # Wait for the user to upload a file
     while file == None:
         file = ask_for_file(
-            title="Please upload a text file to begin!", accept=["text/plain"])
-    
+            title="Please upload a text file to begin!", accept=["text/plain"]
+        )
+
     # Decode bytes to text
     text = file.content.decode("utf-8")
 
     send_message(f"`{file.name}` uploaded, you can now ask questions!")
+
 ```
-</RequestExample>
