--- a/api-reference/send-message.mdx
+++ b/api-reference/send-message.mdx
@@ -3,7 +3,7 @@ title: "send_message"
 ---
 
 Send a message to the chatbot UI.
-If a project ID is configured, the messages will be uploaded to the cloud storage.
+If a project ID is configured, the message will be uploaded to the cloud storage.
 
 ### Parameters
 
@@ -35,9 +35,6 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 </ParamField>
 <ParamField path="indent" type="int" optional>
   If positive, the message will be nested in the UI.
-</ParamField>
-<ParamField path="is_error" type="bool" optional>
-  Whether the message indicates an error.
 </ParamField>
 
 ### Returns
