--- a/concepts/elements.mdx
+++ b/concepts/elements.mdx
@@ -22,7 +22,7 @@ There are display options that determine how an element is rendered in the conte
 
 ### Side
 
-This will display element on a sidebar. The sidebar is hidden by default and opened upon element reference click.
+This will display the element on a sidebar. The sidebar is hidden by default and opened upon element reference click.
 
 ### Page
 
