--- a/api-reference/streaming/send-token.mdx
+++ b/api-reference/streaming/send-token.mdx
@@ -10,8 +10,8 @@ This function sends a token element to the chatbot UI. For an in-depth example: 
   The content of the token element
 </ParamField>
 
+### Usage
 
-<RequestExample>
 ```python Code Example
 import chainlit as cl
 
@@ -19,14 +19,14 @@ msg = ""
 cl.start_stream()
 
 # Send a list of token elements
+
 token_list = ["the", "quick", "brown", "fox"]
 for token in token_list:
-    cl.send_token(token)
-    msg += token + " "
+cl.send_token(token)
+msg += token + " "
 
 # End the stream and send the final message
-prompt = "..."
-cl.send_message(content=msg, prompt=prompt, end_stream=True)
+
+cl.send_message(content=msg, end_stream=True)
 
 ```
-</RequestExample>
