--- a/api-reference/streaming/start-stream.mdx
+++ b/api-reference/streaming/start-stream.mdx
@@ -7,7 +7,8 @@ This function sends a token element to the chatbot UI. For an in-depth example: 
 ### Parameters
 
 <ParamField path="author" type="str" optional>
-  The author of the message, this will be used in the UI. Defaults to the chatbot name (see config).
+  The author of the message, this will be used in the UI. Defaults to the
+  chatbot name (see config).
 </ParamField>
 
 <ParamField path="indent" type="int" optional>
@@ -15,15 +16,18 @@ This function sends a token element to the chatbot UI. For an in-depth example: 
 </ParamField>
 
 <ParamField path="language" type="str" optional>
-  Language of the code is the content is code. See https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock--supported-languages for a list of supported languages.
+  Language of the code is the content is code. See
+  https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock--supported-languages
+  for a list of supported languages.
 </ParamField>
 
 <ParamField path="llm_settings" type="LLMSettings" optional>
-  Settings of the LLM used to generate the prompt. This is useful for debug purposes in the prompt playground.
+  Settings of the LLM used to generate the prompt. This is useful for debug
+  purposes in the prompt playground.
 </ParamField>
 
+### Usage
 
-<RequestExample>
 ```python Code Example
 import chainlit as cl
 
@@ -31,14 +35,13 @@ msg = ""
 cl.start_stream()
 
 # Send a list of token elements
+
 token_list = ["the", "quick", "brown", "fox"]
 for token in token_list:
-    cl.send_token(token)
-    msg += token + " "
+cl.send_token(token)
+msg += token + " "
 
 # End the stream and send the final message
-prompt = "..."
-cl.send_message(content=msg, prompt=prompt, end_stream=True)
 
+cl.send_message(content=msg, end_stream=True)
 ```
-</RequestExample>
